improved druids spell listing and added the fighter archetypes (incomplete)

--- a/specialities/druid.tex
+++ b/specialities/druid.tex
@@ -2,7 +2,7 @@
 	\centering
 	\begin{tabular}{cp{6cm}p{6cm}}
 	\textbf{Level} & \textbf{Landzirkel} & \textbf{Mondzirkel} \\ \hline
-	& \textit{zusätzliche Zaubersprüche bei Lvl 3, 5, 7 und 9} & \\ \hline
+	& \textit{zusätzliche Zaubersprüche bei Lvl 3, 5, 7 und 9, siehe 2. tabelle} & \\ \hline
 	2 &
 	1 zusätzlicher Zaubertrick (Cantrip) deiner Wahl \linebreak
 	Du kannst während einer kurzen Rast kombinierte Anzahl an Zauberslot auffrischen = der Hälfte des Druidenlevels und maximal ein 6. Levelslot. &
@@ -27,18 +27,143 @@
 \clearpage
 \begin{table}
 	\centering
-	\begin{tabular}{cp{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{2cm}}
+	\begin{tabular}{cp{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}p{3cm}}
 	\textbf{Level} & \textbf{Arktik} & \textbf{Küste} & \textbf{Wüste} & \textbf{Wald} & \textbf{Grasland} & \textbf{Gebirge} & \textbf{Sumpf} & \textbf{Underdark} \\ \hline
 	3 & 
-	\textbullet Hold Person \textbullet Spike Growth & 
-	\textbullet Mirror Image \textbullet misty Step & 
-	\textbullet Blur \textbullet Silence &
-	\textbullet Barkskin \textbullet Spider climb & 
-	\textbullet Invisibility \textbullet pass w/o trace & 
-	\textbullet Spider climb \textbullet spike growth & 
-	\textbullet darkness \textbullet Melf's acid arrow & 
-	\textbullet Spider climb \textbullet web \\ \hline
+	\begin{itemize}
+		\item Hold Person
+		\item Spike Growth
+	\end{itemize}&
+	\begin{itemize}
+		\item Mirror Image
+		\item misty Step 
+	\end{itemize}& 
+	\begin{itemize}
+		\item Blur
+		\item Silence
+	\end{itemize}&
+	\begin{itemize}
+		\item Barkskin
+		\item Spider climb
+	\end{itemize}&
+	\begin{itemize}
+		\item Invisibility
+		\item pass w/o trace
+	\end{itemize}&
+	\begin{itemize}
+		\item Spider climb
+		\item spike growth
+	\end{itemize}&
+	\begin{itemize}
+		\item darkness
+		\item Melf's acid arrow
+	\end{itemize}&
+	\begin{itemize}
+		\item Spider climb
+		\item web
+	\end{itemize}\\ \hline
 	
+	5 & 
+	\begin{itemize}
+		\item sleet storm
+		\item slow
+	\end{itemize}&
+	\begin{itemize}
+		\item water breathing
+		\item water walk
+	\end{itemize}& 
+	\begin{itemize}
+		\item create food and water
+		\item protection from energy
+	\end{itemize}&
+	\begin{itemize}
+		\item call lightning
+		\item plant growth
+	\end{itemize}&
+	\begin{itemize}
+		\item daylight
+		\item haste
+	\end{itemize}&
+	\begin{itemize}
+		\item lightning bold
+		\item meld into stone
+	\end{itemize}&
+	\begin{itemize}
+		\item water walk
+		\item stinking cloud
+	\end{itemize}&
+	\begin{itemize}
+		\item gaseous form
+		\item stinking cloud
+	\end{itemize}\\ \hline
+
+	7 & 
+	\begin{itemize}
+		\item freedom of movement
+		\item ice storm
+	\end{itemize}&
+	\begin{itemize}
+		\item control water
+		\item freedom of movement
+	\end{itemize}& 
+	\begin{itemize}
+		\item blight
+		\item hallucinatory terrain
+	\end{itemize}&
+	\begin{itemize}
+		\item divination
+		\item freedom of movement
+	\end{itemize}&
+	\begin{itemize}
+		\item divination
+		\item freedom of movement
+	\end{itemize}&
+	\begin{itemize}
+		\item stone shape
+		\item stoneskin
+	\end{itemize}&
+	\begin{itemize}
+		\item freedom of movement
+		\item locate creature
+	\end{itemize}&
+	\begin{itemize}
+		\item greater invisibility
+		\item stone shape
+	\end{itemize}\\ \hline
+	
+	9 & 
+	\begin{itemize}
+		\item commune with nature
+		\item cone of cold
+	\end{itemize}&
+	\begin{itemize}
+		\item conjure elemental
+		\item scrying
+	\end{itemize}& 
+	\begin{itemize}
+		\item insect plague
+		\item wall of stone
+	\end{itemize}&
+	\begin{itemize}
+		\item commune with nature
+		\item tree stride
+	\end{itemize}&
+	\begin{itemize}
+		\item dream
+		\item insect plague
+	\end{itemize}&
+	\begin{itemize}
+		\item passwall
+		\item wall of stone
+	\end{itemize}&
+	\begin{itemize}
+		\item insect plague
+		\item scrying
+	\end{itemize}&
+	\begin{itemize}
+		\item cloudkill
+		\item insect plague
+	\end{itemize}\\ \hline		
 	\end{tabular}
 	\caption{Zaubersprüche für den Landzirkel}
 \end{table}
