--- a/specialities/specialities.tex
+++ b/specialities/specialities.tex
@@ -102,8 +102,10 @@
 
 \input{wizard.tex}
 \clearpage
+\input{druid.tex}
+\clearpage
 \input{bard.tex}
 \clearpage
-\input{druid.tex}
+\input{fighter.tex}
 
 \end{document}
