included paladin tex-file

--- a/specialities/specialities.tex
+++ b/specialities/specialities.tex
@@ -97,6 +97,7 @@
   \noalign{\global\setlength{\arrayrulewidth}{\arrayrulewidthOriginal}}}
 %=============================
 
+\pagestyle{empty}
 
 \begin{document}
 
@@ -109,5 +110,7 @@
 \input{fighter.tex}
 \clearpage
 \input{monk.tex}
+\clearpage
+\input{paladin.tex}
 
 \end{document}
