changed the occurence of X into göttlicher pfad

--- a/specialities/paladin.tex
+++ b/specialities/paladin.tex
@@ -5,13 +5,13 @@
 
 	3 &
 	Die Lehre der Ehrlichkeit, Mut, Mitgefühl, Ehre und Pflicht\linebreak\linebreak
-	\textbf{Geistliche Waffe}: Benutze X um eine Waffe zu verzaubern. Füge den Charismamodifier dem Angriffswurf hinzu und die Waffe erstrahlt in einem Licht\linebreak
-	\textbf{Wende Unheiliges}: Benutze X. Jeder Untote und Unhold muss einen Weisheitsrettungswurf machen. Bei Misserfolg läuft er bei jedem seiner Züge von dir weg und bleibt min. 30 Fuss von dir entfernt. Es kann nur ausweichen oder sprint aktionen ausführen&
+	\textbf{Geistliche Waffe}: Benutze Göttlicher Kanal um eine Waffe zu verzaubern. Füge den Charismamodifier dem Angriffswurf hinzu und die Waffe erstrahlt in einem Licht\linebreak
+	\textbf{Wende Unheiliges}: Benutze Göttlicher Kanal. Jeder Untote und Unhold muss einen Weisheitsrettungswurf machen. Bei Misserfolg läuft er bei jedem seiner Züge von dir weg und bleibt min. 30 Fuss von dir entfernt. Es kann nur ausweichen oder sprint aktionen ausführen&
 	Die Lehre von Licht entzünden, beschützen, bewahren und vorleben\linebreak\linebreak
-	\textbf{Naturs Zorn}: Benutze X um einen Gegner innerhalb von 10 Fuss in Ranken zu fangen. Der Gegner muss einen Stärke oder Beweglichkeitsrettungswurf machen (wiederholung am Ende seines Zuges)\linebreak
-	\textbf{Bekehren der Ungläubigen}: Benutze X. Jeder Untote und Unhold muss einen Weisheitsrettungswurf machen. Bei Misserfolg läuft er bei jedem seiner Züge von dir weg und bleibt min. 30 Fuss von dir entfernt. Es kann nur ausweichen oder sprint aktionen ausführen. Illusionen zeigen ihre wahre Form&
+	\textbf{Naturs Zorn}: Benutze Göttlicher Kanal um einen Gegner innerhalb von 10 Fuss in Ranken zu fangen. Der Gegner muss einen Stärke oder Beweglichkeitsrettungswurf machen (wiederholung am Ende seines Zuges)\linebreak
+	\textbf{Bekehren der Ungläubigen}: Benutze Göttlicher Kanal. Jeder Untote und Unhold muss einen Weisheitsrettungswurf machen. Bei Misserfolg läuft er bei jedem seiner Züge von dir weg und bleibt min. 30 Fuss von dir entfernt. Es kann nur ausweichen oder sprint aktionen ausführen. Illusionen zeigen ihre wahre Form&
 	Die Lehre vom Kampf gegen das Grosse Böse, keine Gnade fürs boshafte, Entschädigung, um jeden Preis\linebreak\linebreak
-	\textbf{Dem Gegner entsagen}: Als Aktion kannst ud X benutzen um einen Gegner innerhalb von 60 Fuss zu erschrecken. Bei Erfolg eines Weisheitsrettungswurf (Untote und Unholde haben Nachteil) wird die Geschwindigkeit halbiert, sonst auf 0 reduziert\linebreak\textbf{Gelübde der Verfeindung}: Du kannst als Bonusaktion ein Gelübde sprechen (verwendet X) und somit Vorteil bei Angriffswürfen erhält\\ \hline
+	\textbf{Dem Gegner entsagen}: Als Aktion kannst du Göttlicher Kanal benutzen um einen Gegner innerhalb von 60 Fuss zu erschrecken. Bei Erfolg eines Weisheitsrettungswurf (Untote und Unholde haben Nachteil) wird die Geschwindigkeit halbiert, sonst auf 0 reduziert\linebreak\textbf{Gelübde der Verfeindung}: Du kannst als Bonusaktion ein Gelübde sprechen (verwendet Göttlicher Kanal) und somit Vorteil bei Angriffswürfen erhält\\ \hline
 
 	7 &
 	Du und freundliche Wesen innerhalb eines 10 Fuss radius können nicht bezaubert werden (bei Level 18 sind es 30 Fuss)&
@@ -29,7 +29,7 @@
 	\begin{itemize}
 		\item Du erhälst bei Zuganfang 10 Lebenspunkte
 		\item Paladinzauber, die maximal eine Aktion brauchen, können als Bonusaktion verwenden
-		\item Gegner näher als 10 Fuss haben Nachteile bei Paladinzaubern und X
+		\item Gegner näher als 10 Fuss haben Nachteile bei Paladinzaubern und Göttlicher Kanal
 	\end{itemize}&
 	Du kannst als Aktion dich in eine engelhaften Rächer verwandeln und erhälst für 1 Minute folgende Effekte
 	\begin{itemize}
