wrote some additional table content for figther

--- a/specialities/fighter.tex
+++ b/specialities/fighter.tex
@@ -8,35 +8,30 @@
 	Du bist geübt in einem Handwerkszeug deiner Wahl\linebreak
 	Du erhälst 4 ''Superiority Würfel'' (D8) welche du einsetzen kannst um einmal pro Zug ein Maneuver auszuüben. Wähle 3 Maneuver aus (Siehe Liste der Maneuver) \linebreak
 	\textbf{Maneuver DC =  8 + prof. bonus + stärke oder geschicklichkeit}&
-	\\ \hline
+	Du lernst 2 Zaubertrick (Zauberer) und 3 Zaubersprüche (Wizard, 2 davon aus abjuration und evocation)\linebreak
+	Du kannst als Ritual einen Bund mit einer beliebigen Waffe eingehen. Diese kannst du als Bonusaktion heraufbeschwören und du kannst nicht entwaffnet werden.\\ \hline
 	
 	7 &
 	Du kannst den halben Fertigkeitsboni zu Konstitution, Geschicklichkeit und Stärke checks dazuzählen, wenn du nicht bereits geübt bist darin\linebreak
 	Deine Sprungdistanz ist um deine Stärke modifizierer in Fuss erweitert&
-	Du erlernst ein weiteres Maneuver (bereits bekannte können getauscht werden)\linebreak
-	Du &
-	\\ \hline
+	Du erlernst zwei weitere Maneuver (bereits bekannte können getauscht werden) und ein superior Würfel zusätzlich\linebreak
+	Du studierst eine Minute lang eine Kreatur ausserhalb eines Kampfes und erfährst wie weit sie dir überlegen ist&
+	Wenn du ein Zaubertrick anwendest, kannst du als Bonusaktion einen Waffenangriff starten\\ \hline
 	
 	10 &
 	Du kannst einen weiteren Kampfstil auswählen&
-	&
-	\\ \hline
+	Deine Superior würfel werden zu D10s &
+	Ein Waffenangriff verursacht bei einer Kreatur Nachteil beim Rettungswurf auf einen von dir ausgeführten Zauber\\ \hline
 	
 	15 &
 	Bei Angriffswürfen zählen 18-20 als kritische Treffer&
-	&
+	Wenn du Initiative würfelst und keine Superior Würfel mehr hast, erhälst du einen&
 	\\ \hline
 	
 	18 &
 	Wenn du wenigers als die Hälfte an Leben hast, erhälst du zu Beginn deines Zuges Lebenspunkte = 5 + Konstitutionsmodifikator&
-	&
+	Deine Superior Würfel werden zu D12&
 	\\ \hline
 	\end{tabular}
 	\caption{Die verschiedenen Martial Archetypes}
 \end{table}
-
-\begin{tabulary}{19cm}{LLLL}
-	test & test & Du bist geübt in einem Handwerkszeug deiner Wahl\linebreak
-	Du erhälst 4 ''Superiority Würfel'' (D8) welche du einsetzen kannst um einmal pro Zug ein Maneuver auszuüben. Wähle 3 Maneuver aus (Siehe Liste der Maneuver)
-	\textbf{Maneuver DC =  8 + prof. bonus + stärke oder geschicklichkeit} \\
-\end{tabulary}
