started the rogue table

--- a/specialities/specialities.tex
+++ b/specialities/specialities.tex
@@ -112,5 +112,9 @@
 \input{monk.tex}
 \clearpage
 \input{paladin.tex}
+\clearpage
+%\input{ranger.tex}
+\clearpage
+\input{rogue.tex}
 
 \end{document}
