added rogue to the table

--- a/specialities/rogue.tex
+++ b/specialities/rogue.tex
@@ -14,23 +14,29 @@
 	Klettern kostet keine zusätzliche Bewegungskosten und die Sprungdistanz (mit Anlauf) erweitert sich um deinen Beweglichkeitsmodifier in Fuss
 	Du wirst begabt im Gebrauch von Tarn und Giftausrüstung \linebreak
 	Du hast Vorteil gegen jede Kreatur, die noch keinen Zug im Kampf absolviert hat und jeder Angriff gegen überraschte Gegner sind Kritische Treffer&
-	&
-	\\ \hline
+	
+    geübt mit Verwandlungs- und Vergiftugnsausrüstung\newline
+    Vorteil auf Angriffe gegen Kreaturen, die in diesem noch keinen Zug gemacht haben oder überrascht sind&
+	
+    Du kannst ab nun 3 Zaubertricks wirken. Einer davon ist \textit{Mage Hand}. Diese kannst du unsichtbar werden lassen und damit auch Schlösser knacken (kann auch durch ''Cunning Action'' benutzt werden).\newline
+    Du kannst nun 3 Verzauberungs- oder Illusionszauber wirken. Intelligenz ist deine Zauberkraft. Du hast 2 1st-Level Spellslots.\newline
+    \textbf{DC} = 8 + berufungs mod. + intelligenz mod.\newline
+    \textbf{Angriffsbonus} = berufungs mod. + intelligenz mod\\ \hline
 	
 	9 &
 	Du hast Vorteil auf Tarnwürfe wenn du nur die Hälfte der Bewegungen ausgeführt hast&
-	&
-	\\ \hline
+	Du kannst nach 7 Tagen vorbereitung und 25gp eine neue Identität annehmen.&
+	Wenn du vor deinem Zauberspruchziel versteckt bist, hat dieses Nachteil bei Rettungswürfen auf deine Zauber\\ \hline
 
 	13 &
 	Du kannst alle Einschränkungen betreffend Klasse, Rases und Level von magischen Gegenständen ignorieren&
-	&
-	\\ \hline
+	Du kannst Sprache, Schrift und Verhalten einer anderen Person imitieren (braucht 3 Stunden zum lernen). Du hast Vorteil bei Charisma checks um deine Tarnung aufrecht zu erhalten.&
+	Als Bonusaktion kannst du einen Gegner mit deiner \textit{Mage Hand} ablenken um so eine Vorteil beim Angriff zu haben\\ \hline
 	
 	17 &
 	Du kannst in der ersten Runde jedes Kampfes (ausser wenn überrascht) zwei Züge machen. Den ersten normal nach Initiative und den 2. nach deiner Initiative - 10 &
-	&
-	\\ \hline
+	Wenn du ein überraschten Gegner angreifst muss dieser einen Konstitutionsrettungswurf machen. Bei Misslingen verdoppelt es den gemachten Schaden. (DC = 8 + Gesch. mod + Berufungs mod)&
+	Wirst du das Ziel eines Zaubers, kannst du den Wirker dazu bringen einen Rettungswurf zu machen mit seiner Zauberfähigkeit. Bei Misslingen ist der Effekt negiert und du kannst für 8 Stunden diesen Zauber wirken. Der Gegner kann ihn solange nicht mehr einsetzen.\\ \hline
 	\end{tabular}
 	\caption{die Archtypen von Roguen}
 \end{table}
